--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,8 +11,12 @@ import "../styles/global.css";
 </script>
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y67F0BJRHL"></script>
 		<script is:inline>
@@ -41,8 +45,6 @@ import "../styles/global.css";
 		/></noscript>
 		<!-- End Meta Pixel Code -->
 		
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
