--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "Seguros RP - Tu Tranquilidad es Nuestro Compromiso";
-const pageDescription = "Especialistas en seguros de vida, gastos médicos mayores, autos y más. Con más de 25 años de experiencia, protegemos lo que más valoras.";
+const pageDescription = "Especialistas en seguros de vida, gastos m&eacute;dicos mayores, autos y m&aacute;s. Con m&aacute;s de 25 a&ntilde;os de experiencia, protegemos lo que m&aacute;s valoras.";
 export const prerender = true;
 ---
 
