--- a/src/pages/segubecalanding/index.astro
+++ b/src/pages/segubecalanding/index.astro
@@ -10,7 +10,7 @@ import Contact from '../../components/Contact.astro';
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <title>Segubeca | Asegura el futuro educativo de tus hijos</title>
+  <title>Segubeca | Asegura el futuro educativo de tus hijos | Asesores Seguros Monterrey</title>
   <meta name="description" content="Segubeca te ayuda a asegurar la educación universitaria de tus hijos. Garantiza su futuro con capital disponible a los 18 años y protección en caso de fallecimiento." />
   <meta name="keywords" content="Segubeca, seguro educativo, futuro hijos, educación universitaria, ahorro educación, financiamiento educativo" />
   <meta name="author" content="Segubeca" />
